<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/detayliPp"
        android:layout_width="105dp"
        android:layout_height="100dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/profileCameraButton"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="17dp"
        android:text="@string/imageCameraButtonText"
        android:background="@drawable/button"
        app:layout_constraintStart_toEndOf="@+id/detayliPp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profileGalleryButton"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="2dp"
        android:text="@string/imageGalleryButtonText"
        android:background="@drawable/button"
        app:layout_constraintStart_toEndOf="@+id/detayliPp"
        app:layout_constraintTop_toBottomOf="@+id/profileCameraButton" />


    <TextView
        android:id="@+id/detayliEgitimText"
        android:layout_width="156dp"
        android:layout_height="30dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="126dp"
        android:gravity="center"
        android:text="@string/egitimDurumu"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileGalleryButton" />

    <TextView
        android:id="@+id/detayliIsBilgileriText"
        android:layout_width="156dp"
        android:layout_height="30dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="126dp"
        android:gravity="center"
        android:text="@string/guncelIsBilgileri"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/profileGuncelleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="200dp"
        android:background="@drawable/button"
        android:text="@string/profileGuncelleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detayliPhone" />

    <EditText
        android:id="@+id/detayliPhone"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="174dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/phone"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/profilePhone"
        android:inputType="number"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detayliMail" />

    <EditText
        android:id="@+id/detayliMail"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="174dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/profileMail"
        android:inputType="textEmailAddress"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detayliIetisimBilgileriText" />

    <EditText
        android:id="@+id/detayliCompany"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="174dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/company"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/company"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detayliCity" />

    <EditText
        android:id="@+id/detayliCity"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="174dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/city"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detayliCountry" />

    <EditText
        android:id="@+id/detayliCountry"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="174dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/country"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/country"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detayliIsBilgileriText" />

    <TextView
        android:id="@+id/detayliIetisimBilgileriText"
        android:layout_width="156dp"
        android:layout_height="30dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="126dp"
        android:gravity="center"
        android:text="@string/iletisimBilgileri"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detayliCompany" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detayliEgitimText">

        <RadioButton
            android:id="@+id/lisansRadio"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:text="@string/lisansRadio" />

        <RadioButton
            android:id="@+id/yuksekLisansRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:text="@string/yuksekLisansRadio" />

        <RadioButton
            android:id="@+id/doktoraRadio"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:text="@string/doktoraRadio" />
    </RadioGroup>

    <EditText
        android:id="@+id/nameText"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="11dp"
        android:hint="@string/registerNameString"
        android:textSize="15sp"
        android:gravity="center"
        android:background="@drawable/custom_input"
        app:layout_constraintEnd_toStartOf="@+id/surnameText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detayliPp" />

    <EditText
        android:id="@+id/surnameText"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/registerSurnameString"
        android:textSize="15sp"
        android:gravity="center"
        android:background="@drawable/custom_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nameText"
        app:layout_constraintTop_toBottomOf="@+id/profileGalleryButton" />

    <Button
        android:id="@+id/sifreDegistir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="80dp"
        android:text="SIFRE DEGISTIR"
        android:background="@drawable/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileGuncelleButton"
        app:layout_constraintTop_toBottomOf="@+id/detayliPhone" />


</androidx.constraintlayout.widget.ConstraintLayout>