<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ppImage"
        android:layout_width="125dp"
        android:layout_height="118dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ppCameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:text="@string/imageCameraButtonText"
        android:background="@drawable/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ppImage" />

    <Button
        android:id="@+id/ppGalleryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="70dp"
        android:text="@string/imageGalleryButtonText"
        android:background="@drawable/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ppImage" />

    <EditText
        android:id="@+id/registerName"
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:hint="@string/registerNameString"
        android:background="@drawable/custom_input"
        android:inputType="textPersonName"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ppCameraButton" />

    <EditText
        android:id="@+id/registerSurname"
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:hint="@string/registerSurnameString"
        android:gravity="center"
        android:background="@drawable/custom_input"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerName" />

    <EditText
        android:id="@+id/entranceYear"
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:hint="@string/entranceYearString"
        android:gravity="center"
        android:background="@drawable/custom_input"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerSurname" />

    <EditText
        android:id="@+id/graduatedYear"
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:hint="@string/graduateYearString"
        android:gravity="center"
        android:background="@drawable/custom_input"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entranceYear" />

    <EditText
        android:id="@+id/registerMail"
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:hint="@string/registerMailString"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graduatedYear" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:hint="@string/registerPasswordString"
        android:gravity="center"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/lock"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerMail" />

    <Button
        android:id="@+id/registerScreenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="158dp"
        android:text="@string/registerButtonString"
        android:background="@drawable/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>